[package]
name = "xray-oxide"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
simple_logger = "4.2"
image = "0.24.7"
itertools = "0.11.0"
log = "0.4.20"
rust-ini = "0.20.0"
softbuffer = "0.3.2"
thiserror = "1.0.50"
winit = { version = "0.29.2", features = ["rwh_05"] }
thread-local-panic-hook = "0.1.0"
local-encoding = "0.2.0"
rayon = "1.8"
wgpu = "0.18"
pollster = "0.3"

[build-dependencies]
cfg_aliases = "0.1"
