#[dependencies]
#anyhow = "1.0.75"
#byteorder = "1.5.0"
#simple_logger = "4.2"
#image = "0.24.7"
#itertools = "0.11.0"
#log = "0.4.20"
#rust-ini = "0.20.0"
#softbuffer = "0.3.2"
#thiserror = "1.0.50"
#winit = { version = "0.29.2", features = ["rwh_05"] }
#thread-local-panic-hook = "0.1.0"
#local-encoding = "0.2.0"
#rayon = "1.8"
#wgpu = { version = "0.18", features = ["spirv"] }
#pollster = "0.3"

[workspace]
resolver = "2"
members = [
    "xray-oxide-core",
    "xray-oxide-engine",
    "xray-oxide-render",
    "xray-oxide-render-wgpu",
    "xray-oxide-main",
]