[package]
name = "xray-oxide-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xray-oxide-core = { path = "../xray-oxide-core" }
xray-oxide-engine = { path = "../xray-oxide-engine" }

anyhow = "1.0"

[build-dependencies]
cfg_aliases = "0.1"