[package]
name = "xray-oxide-render-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xray-oxide-render = { path = "../xray-oxide-render" }

anyhow = "1.0"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = { version = "0.18", features = ["spirv"] }
thiserror = "1.0"
hassle-rs = "0.10"
log = "0.4"