[package]
name = "xray-oxide-render-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xray-oxide-core = { path = "../xray-oxide-core" }
xray-oxide-render = { path = "../xray-oxide-render" }

anyhow = "1.0"
winit = { version = "0.29", features = ["rwh_05"] }
# Cannot update to 0.18.0 because of https://github.com/gfx-rs/wgpu/issues/4569
wgpu = { version = "0.17", features = ["spirv"] }
thiserror = "1.0"
hassle-rs = "0.10"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"